# abella

./: .gitignore  CHANGES.md  Makefile  TODO.support.org  abella.opam  dune  dune-project  myocamlbuild.ml
.github/workflows/: check-tests.yml
examples/: .gitignore  OMakefile
examples/compute/: mll2.thm  msets.thm  new_msets.thm
examples/forallp/: test.mod  test.sig  test.thm
examples/lambda-calculus/: cr.thm  eval.thm
examples/lambda-calculus/kripke-sn/: ksn.thm  stlc.mod  stlc.sig
examples/logic/: focus.thm
examples/logic/mall/: mall.thm  malle.thm  mallf.thm
examples/programming-languages/: poplmark-1a.thm
src/: abella.ml  abella_dep.ml  abella_doc.ml  abella_ipfs.ml  abella_types.ml  accumulate.ml  checks.ml  compute.ml  context.ml  context.mli  context_test.ml  copy_exe.ml  depend.ml  dune  extensions.ml  filepath.ml  hhw.ml  hhw.mli  lexer.mll  lf_core.ml  metaterm.ml  output.ml  parser.mly  prover.ml  schema.ml  schemaparser.mly  schemas.ml  source.ml  source2.ml  spec.ml  state.ml  state.mli  store.ml  tactics.ml  term.ml  term.mli  translation.ml  typing.ml  unify.ml  unify.mli
src/tools/: ppx_abella.ml
support/: package-lock.json  package.json  test.json  tsconfig.json
support/css/: abella_doc.css  style-src.css
support/howe/: sim.thm
support/ts/: abella_doc.ts
test/: dune  test.ml  test_metaterm.ml  test_source.ml  test_unify.ml
tools/: dune  ppx_abella.ml
