(executable
  (name abella)
  (modules abella)
  (libraries abella_lib unix))

(rule
  (target abella_doc_dist.ml)
  (deps ../support/dist/abella_doc.js ../support/dist/abella_doc.css)
  (action (run ocaml-crunch -m plain -o abella_doc_dist.ml ../support/dist)))

(executable
  (name abella_doc)
  (modules abella_doc)
  (libraries abella_lib unix))

(library
  (name abella_lib)
  (modules :standard \ abella abella_doc)
  (wrapped false))

(ocamllex
  (modules lexer))

; (ocamlyacc
;   (modules parser))

(menhir
  (modules parser)
  (infer true)
  (flags --explain))

(alias
  (name default)
  (deps abella.exe abella_doc.exe))