(executable
 (name abella)
 (modules abella)
 (libraries abella_lib unix cmdliner))

(rule
 (with-stdout-to abella_doc_dist.ml
  (progn
   (echo "let css = {abella_doc_css|")
   (cat ../support/dist/abella_doc.css)
   (echo "|abella_doc_css};;\n")
   (echo "let js = {abella_doc_js|")
   (cat ../support/dist/abella_doc.js)
   (echo "|abella_doc_js};;\n"))))

(executable
 (name abella_doc)
 (modules abella_doc abella_doc_dist)
 (libraries abella_lib unix cmdliner))

(executable
 (name abella_dep)
 (modules abella_dep)
 (libraries abella_lib unix cmdliner))

(executable
 (name abella_ipfs)
 (modules abella_ipfs)
 (libraries abella_lib unix re cmdliner))

(library
 (name abella_lib)
 (modules :standard \ abella abella_dep abella_doc abella_doc_dist abella_ipfs)
 (libraries unix re xdg yojson base64 curl
; ppx_yojson_conv_lib
 )
; (preprocess (pps ppx_yojson_conv))
 (wrapped false))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (infer true)
 (flags --explain))

(alias
 (name default)
 (deps abella.exe abella_doc.exe abella_dep.exe abella_ipfs.exe))

(rule
 (alias runtest)
 (deps ../test/test.exe)
 (action (run ../test/test.exe)))
